// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtfaScanResultsToUnifiedResults Null ScanResults input returns empty output 1`] = `[]`;

exports[`AtfaScanResultsToUnifiedResults ScanResults with contentDescription and text fields specified directly and via Span 1`] = `
[
  {
    "descriptors": {
      "boundingRectangle": undefined,
      "className": "viewClass1",
      "contentDescription": "contentDescription (direct)",
      "text": null,
    },
    "identifiers": {
      "conciseName": "viewClass1",
      "identifier": "accessible name #1",
    },
    "resolution": {
      "howToFixSummary": "How to fix My Rule #1",
    },
    "ruleId": "My Rule #1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "boundingRectangle": undefined,
      "className": "viewClass1",
      "contentDescription": "contentDescription (via Span)",
      "text": null,
    },
    "identifiers": {
      "conciseName": "viewClass1",
      "identifier": "accessible name #1",
    },
    "resolution": {
      "howToFixSummary": "How to fix My Rule #1",
    },
    "ruleId": "My Rule #1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "boundingRectangle": undefined,
      "className": "viewClass1",
      "contentDescription": null,
      "text": "text (direct)",
    },
    "identifiers": {
      "conciseName": "viewClass1",
      "identifier": "accessible name #1",
    },
    "resolution": {
      "howToFixSummary": "How to fix My Rule #1",
    },
    "ruleId": "My Rule #1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "boundingRectangle": undefined,
      "className": "viewClass1",
      "contentDescription": null,
      "text": "text (via Span)",
    },
    "identifiers": {
      "conciseName": "viewClass1",
      "identifier": "accessible name #1",
    },
    "resolution": {
      "howToFixSummary": "How to fix My Rule #1",
    },
    "ruleId": "My Rule #1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "boundingRectangle": undefined,
      "className": "viewClass1",
      "contentDescription": "contentDescription (direct)",
      "text": "text (via Span)",
    },
    "identifiers": {
      "conciseName": "viewClass1",
      "identifier": "accessible name #1",
    },
    "resolution": {
      "howToFixSummary": "How to fix My Rule #1",
    },
    "ruleId": "My Rule #1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "boundingRectangle": undefined,
      "className": "viewClass1",
      "contentDescription": "contentDescription (direct)",
      "text": "text (direct)",
    },
    "identifiers": {
      "conciseName": "viewClass1",
      "identifier": "accessible name #1",
    },
    "resolution": {
      "howToFixSummary": "How to fix My Rule #1",
    },
    "ruleId": "My Rule #1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
]
`;

exports[`AtfaScanResultsToUnifiedResults ScanResults with no CheckResults returns empty output 1`] = `[]`;

exports[`AtfaScanResultsToUnifiedResults ScanResults with skipped, info, warnings, errors, view IDs, and excluded results 1`] = `
[
  {
    "descriptors": {
      "boundingRectangle": {
        "bottom": 300,
        "left": 100,
        "right": 200,
        "top": 0,
      },
      "className": "viewClass1",
      "contentDescription": "id1",
      "text": "id2",
    },
    "identifiers": {
      "conciseName": "viewClass1",
      "identifier": "accessible name #1",
    },
    "resolution": {
      "howToFixSummary": "How to fix My Rule #1",
    },
    "ruleId": "My Rule #1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "boundingRectangle": {
        "bottom": 300,
        "left": 100,
        "right": 200,
        "top": 0,
      },
      "className": "viewClass1",
      "contentDescription": "id1",
      "text": "id2",
    },
    "identifiers": {
      "conciseName": "viewClass1",
      "identifier": "accessible name #1",
    },
    "resolution": {
      "howToFixSummary": "How to fix My Rule #1",
    },
    "ruleId": "My Rule #1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "boundingRectangle": undefined,
      "className": "viewClass2",
      "contentDescription": "id3",
      "text": "id4",
    },
    "identifiers": {
      "conciseName": "viewClass2",
      "identifier": "accessible name #2",
    },
    "resolution": {
      "howToFixSummary": "How to fix My Rule #2",
    },
    "ruleId": "My Rule #2",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
]
`;
